Scrollbar: Fix thickness of horizontal scrollbars

--- a/src/scrollbar.less
+++ b/src/scrollbar.less
@@ -3,6 +3,7 @@
     border: 1px solid var(--breeze-scrollbar-normal-track-border) !important;
     border-radius: var(--breeze-scrollbar-border-radius) !important;
     width: 8px !important;
+    height: 8px !important;
 
     &:hover {
         background-color: var(--breeze-scrollbar-hover-track-background) !important;
